modified parallax background

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="col offset-s3 s6 offset-m1 m10 l4 xl3 center-align">
                     <img class="photo responsive-img z-depth-5" src="assets/images/anyaphoto1.jpg" alt="Hanna K.">
                 </div>
-                <div class="col offset-s1 s10 offset-m1 m10 l8 xl9">
+                <div class="col s12 offset-m1 m10 l8 xl9">
                     <div class="row center-align">
                         <h3 class="col s12" id="aboutMe">About Anya</h3>
                     </div>
@@ -56,7 +56,7 @@
     <!-- Parallax -->
     <div class="parallax-container z-depth-5">
         <div class="parallax">
-            <img src="assets/images/parallax1.jpg">
+            <img src="assets/images/office1.jpg">
         </div>
     </div>
     <!-- About Technical Skills -->
@@ -94,9 +94,9 @@
         </div>
     </div>
     <!-- Parallax -->
-    <div class="parallax-container">
+    <div class="parallax-container z-depth-5">
         <div class="parallax">
-            <img src="assets/images/parallax1.jpg">
+            <img src="assets/images/computer.jpg">
         </div>
     </div>
     <!-- Portfolio -->
@@ -235,71 +235,72 @@
         </div>
     </div>
     <!-- Parallax -->
-    <div class="parallax-container">
+    <div class="parallax-container" id="lastParallaxContainer">
         <div class="parallax">
-            <img src="assets/images/parallax1.jpg">
+            <img src="assets/images/handshake.jpg">
         </div>
-    </div>
-    <!-- Connect with Anya -->
+        <!-- Connect with Anya -->
     <div id="aboutContacts" class="section scrollspy">
-        <div class="row center">
-            <h3 class="col s12" id="connect">Connect With Anya</h3>
-        </div>
-        <div class="row">
-            <div class="col offset-s2 s3 m2 offset-l2 l2 offset-xl2 xl2">
-                <div class="row">
-                    <div class="col s12">
-                        <img class="responsive-img" src="assets/images/github4.png" alt="github">
-                    </div>
-                    <div class="col s12">
-                        <p class="center">
-                            <a class="connectP" href="https://github.com/AnyaKilpatrick" target="_blank">
-                                Github
-                            </a>
-                        </p>
+            <div class="row center">
+                <h3 class="col s12" id="connect">Connect With Anya</h3>
+            </div>
+            <div class="row">
+                <div class="col offset-s2 s3 m2 offset-l2 l2 offset-xl2 xl2">
+                    <div class="row">
+                        <div class="col s12">
+                            <img class="responsive-img" src="assets/images/github4.png" alt="github">
+                        </div>
+                        <div class="col s12">
+                            <p class="center">
+                                <a class="connectP" href="https://github.com/AnyaKilpatrick" target="_blank">
+                                    Github
+                                </a>
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col offset-s1 s3 m2 l2 xl2">
-                <div class="row">
-                    <div class="col s12">
-                        <img id="linkedinImg" class="responsive-img" src="assets/images/linkedin.png" alt="linkedin">
-                    </div>
-                    <div class="col s12">
-                        <p class="center">
-                            <a class="connectP" href="https://www.linkedin.com/in/hanna-kilpatrick-5a6b7914b/" target="_blank">
-                                LinkedIn
-                            </a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m2 l2 xl2">
-                <div class="row">
-                    <div class="col s4 m12 l12 xl12">
-                        <img id="phoneImg" class="responsive-img" src="assets/images/phone.png" alt="phone">
-                    </div>
-                    <div class="col s6 m12 l12 xl12">
-                        <p id="phoneNum" class="connectP center">
-                            (804) 972-1265
-                        </p>
+                <div class="col offset-s1 s3 m2 l2 xl2">
+                    <div class="row">
+                        <div class="col s12">
+                            <img id="linkedinImg" class="responsive-img" src="assets/images/linkedin.png" alt="linkedin">
+                        </div>
+                        <div class="col s12">
+                            <p class="center">
+                                <a class="connectP" href="https://www.linkedin.com/in/hanna-kilpatrick-5a6b7914b/" target="_blank">
+                                    LinkedIn
+                                </a>
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col s12 m3 l3 xl3">
-                <div class="row">
-                    <div class="col s4 m8 l8 xl8 center">
-                        <img id="emailImg" class="responsive-img" src="assets/images/email.png" alt="email">
+                <div class="col s12 m2 l2 xl2">
+                    <div class="row">
+                        <div class="col s3 m12 l12 xl12">
+                            <img id="phoneImg" class="responsive-img" src="assets/images/phone1.png" alt="phone">
+                        </div>
+                        <div class="col s5 m12 l12 xl12">
+                            <p id="phoneNum" class="connectP center">
+                                (804) 972-1265
+                            </p>
+                        </div>
                     </div>
-                    <div class="col s4 m7 l7 xl7 center">
-                        <p id="emailP" class="connectP">
-                            hannakilpatrick@gmail.com
-                        </p>
+                </div>
+                <div class="col s12 m3 l3 xl3">
+                    <div class="row">
+                        <div class="col s3 m8 l8 xl8 center">
+                            <img id="emailImg" class="responsive-img" src="assets/images/email.png" alt="email">
+                        </div>
+                        <div class="col s3 m7 l7 xl7 center">
+                            <p id="emailP" class="connectP">
+                                hannakilpatrick@gmail.com
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    
     <!-- footer -->
     <div class="row"  >
         <div id="footer" class="col s12 center">
