updated tech skills div

--- a/index.html
+++ b/index.html
@@ -73,17 +73,18 @@
                                 <tr><td>Bootstrap, Materialize</td></tr>
                                 <tr><td>GIT, Github, GitKraken</td></tr>
                                 <tr><td>jQuery</td></tr>
-                                <tr><td>Node.js</td></tr>
+                                <tr><td>Node.js, Express.js</td></tr>
                             </tbody>
                         </table>
                     </div>
                     <div class="col s6 m6 l5 xl4">
                         <table class="striped">
                             <tbody>           
-                                <tr><td>Express.js</td></tr>
+                                <tr><td>MongoDB, Mongoose</td></tr>
                                 <tr><td>MySQL, Firebase</td></tr>
                                 <tr><td>APIs, JSON, AJAX</td></tr>
                                 <tr><td>Passport</td></tr>
+                                <tr><td>React.js, Material-UI</td></tr>
                             </tbody>
                         </table>
                     </div>
