updated project info

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 <tr><td>HTML5, CSS, JavaScript</td></tr>
                                 <tr><td>Bootstrap, Materialize</td></tr>
                                 <tr><td>GIT, Github, GitKraken</td></tr>
-                                <tr><td>jQuery</td></tr>
+                                <tr><td>jQuery, Passport</td></tr>
                                 <tr><td>Node.js, Express.js</td></tr>
                             </tbody>
                         </table>
@@ -83,7 +83,7 @@
                                 <tr><td>MongoDB, Mongoose</td></tr>
                                 <tr><td>MySQL, Firebase</td></tr>
                                 <tr><td>APIs, JSON, AJAX</td></tr>
-                                <tr><td>Passport</td></tr>
+                                <tr><td>Socket.io</td></tr>
                                 <tr><td>React.js, Material-UI</td></tr>
                             </tbody>
                         </table>
@@ -120,18 +120,18 @@
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">SpeakIT<i class="material-icons right">close</i></span>
-                        <p>May 2018</p>
-                        <p>Back End Developer</p>
+                        <p>July 2018</p>
+                        <p>Full Stack Developer (solo project)</p>
                         <p>
-                            SpeakIT - social web app, that helps users, who are studying or willing to study a foreign language, connect and practice with other users that are fluent in it.
+                            SpeakIT (improved version) - social web app, that helps users, who are studying or willing to study a foreign language, connect and practice with other users that are fluent in it.
                         </p>
                         <p>
-                            Languages/Tools: Node.js, Express, JavaScript, jQuery, MySQL, Sequelize, Handlebars, Passport, Socket.io
+                            Languages/Tools: React, Node.js, Express, JavaScript, Material-UI, MongoDB, Mongoose, Passport, Socket.io, jVectorMap.
                         </p>
-                            Deployed app: <a href="https://speak-it.herokuapp.com/" target="_blank">here</a>
+                            Deployed app: <a href="https://speak-it-2.herokuapp.com/" target="_blank">here</a>
                         <p>Github
                             <span>
-                                <a class="btn-floating btn-large waves-effect waves-light cyan darken-4" href="https://github.com/AnyaKilpatrick/SpeakIT" target="_blank">
+                                <a class="btn-floating btn-large waves-effect waves-light cyan darken-4" href="https://github.com/AnyaKilpatrick/speak-it" target="_blank">
                                     <i class="fab fa-github fa-7x"></i>
                                 </a>
                             </span>
